--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
     "declaration": true,
     "declarationDir": "dist",
+    "emitDecoratorMetadata": false,
+    "experimentalDecorators": false,
+    "esModuleInterop": true,
     "importHelpers": true,
     "jsx": "react",
-    "lib": ["es6", "dom"],
+    "lib": ["es2015", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
@@ -15,16 +17,15 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "outDir": "compiled",
     "pretty": true,
     "removeComments": true,
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": true,
     "stripInternal": true,
-    "outDir": "compiled",
-    "target": "es5",
-    "baseUrl": "./src"
+    "target": "es5"
   },
-  "include": ["src"],
+  "include": ["src", "types"],
   "exclude": ["node_modules", "dist"]
 }
