--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
     "@types/lodash-es": "^4.17.3",
@@ -32,6 +34,7 @@
     "cp-cli": "^2.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.15.1",
+    "husky": "^1.3.1",
     "jest": "^24.5.0",
     "jest-cli": "^24.5.0",
     "jest-haste-map": "^24.5.0",
@@ -71,10 +74,21 @@
     "precommit": "lint-staged",
     "size": "size-limit"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged",
+      "post-commit": "git update-index --again"
+    }
+  },
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "prettier --config ./.prettierrc --write",
       "git add"
+    ],
+    "src/**/*.ts": [
+      "tslint",
+      "jest --findRelatedTests"
     ]
   },
   "jest": {
