--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-transform-rename-import": "^2.3.0",
     "cp-cli": "^2.0.0",
     "cross-env": "^5.2.0",
+    "dtslint": "^0.5.5",
     "eslint": "^5.15.1",
     "husky": "^1.3.1",
     "jest": "^24.5.0",
@@ -71,7 +72,7 @@
     "build": "cross-env NODE_ENV=production tsc -p tsconfig.base.json  && rollup -c && rimraf compiled && cp-cli ./index.js ./dist/index.js",
     "prepublish": "npm run build",
     "format": "prettier --config ./.prettierrc --write 'src/**/*' 'test/**/*' 'README.md'",
-    "precommit": "lint-staged",
+    "dtslint": "dtslint types",
     "size": "size-limit"
   },
   "husky": {
@@ -82,12 +83,9 @@
     }
   },
   "lint-staged": {
-    "**/*.{ts}": [
-      "format",
-      "git add"
-    ],
     "src/**/*.ts": [
-      "test"
+      "prettier --config ./.prettierrc --write",
+      "git add"
     ]
   },
   "jest": {
