--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "babel-plugin-transform-rename-import": "^2.3.0",
     "cp-cli": "^2.0.0",
     "cross-env": "^5.2.0",
-    "dtslint": "^0.5.5",
     "eslint": "^5.15.1",
     "husky": "^1.3.1",
     "jest": "^24.5.0",
@@ -65,13 +64,13 @@
     "lodash-es": "^4.17.11"
   },
   "scripts": {
-    "test": "jest",
-    "test:watch": "npm run test -- --watch",
     "start": "rimraf dist && rimraf compiled && mkdir dist && cp-cli ./index.js ./dist/index.js && cross-env NODE_ENV=development rollup -w -c | tsc -w -p tsconfig.base.json",
     "prebuild": "rimraf dist && rimraf compiled",
     "build": "cross-env NODE_ENV=production tsc -p tsconfig.base.json  && rollup -c && rimraf compiled && cp-cli ./index.js ./dist/index.js",
     "prepublish": "npm run build",
-    "format": "prettier --config ./.prettierrc --write 'src/**/*' 'test/**/*' 'README.md'",
+    "test": "jest",
+    "test:watch": "npm run test -- --watch",
+    "format": "prettier --config ./.prettierrc --write 'src/**/*' 'README.md'",
     "dtslint": "dtslint types",
     "size": "size-limit"
   },
@@ -84,7 +83,7 @@
   },
   "lint-staged": {
     "src/**/*.ts": [
-      "prettier --config ./.prettierrc --write",
+      "yarn prettier --config ./.prettierrc --write 'src/**/*'",
       "git add"
     ]
   },
