--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,8 +1,7 @@
 {
-  "*.{ts,js,json}": [
-    "prettier --config ./.prettierrc --write",
+  "**/*.{ts,json}": ["prettier --config ./.prettierrc --write", "git add"],
+  "**/*.ts": [
     "tslint --config ./tslint.json",
-    "cross-env NODE_ENV=test jest --bail --findRelatedTests",
-    "git add"
+    "cross-env NODE_ENV=test jest --bail --findRelatedTests"
   ]
 }
