fix: lint-staged working

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "prebuild": "rimraf dist && rimraf compiled",
     "build": "cross-env NODE_ENV=production tsc -p tsconfig.base.json  && rollup -c && rimraf compiled && cp-cli ./index.js ./dist/index.js",
     "prepublish": "npm run build",
+    "lint": "tslint --config ./tslint.json --project '.'",
     "test": "jest",
     "test:watch": "npm run test -- --watch",
     "format": "prettier --config ./.prettierrc --write 'src/**/*' 'README.md'",
@@ -79,6 +80,16 @@
       "pre-commit": "lint-staged",
       "post-commit": "git update-index --again"
     }
+  },
+  "lint-staged": {
+    "*.{ts,js,json,md}": [
+      "prettier --config ./.prettierrc --write",
+      "git add"
+    ],
+    "src/**/*.ts": [
+      "tslint --config ./tslint.json",
+      "jest --findRelatedTests"
+    ]
   },
   "jest": {
     "collectCoverageFrom": [
