--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.3.4",
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
+    "@types/flat": "^0.0.28",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
     "@types/lodash-es": "^4.17.3",
@@ -60,6 +61,7 @@
   },
   "dependencies": {
     "deepmerge": "^3.2.0",
+    "flat": "^4.1.0",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11"
   },
