--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
-deploy:
-  provider: npm
-  email: 'igor.szyporyn@gmail.com'
-  api_key: '98530931-525b-4dc8-b39f-bbc54d81bdb0'
-  on:
-    tags: true
-    branch: master
+jobs:
+  include:
+    - stage: npm release
+      if: tag IS present
+      node_js: '8'
+      script: yarn build
+      before_deploy:
+        - cd dist
+      deploy:
+        provider: npm
+        email: '$NPM_EMAIL'
+        api_key: '$NPM_TOKEN'
+        skip_cleanup: true
+        on:
+          tags: true
