--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ jobs:
   include:
     - stage: npm release
       if: tag IS present
-      node_js: '8'
+      node_js:
+        - '8'
+        - '9'
       script: yarn build
       before_deploy:
         - cd dist
