--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
+language: node_js
+node_js:
+  - '9'
+  - '8'
+
+script: echo "Running tests against $(node -v) ...
+
 jobs:
   include:
     - stage: npm release
       if: tag IS present
       node_js:
-        - '8'
-        - '9'
+        - '8.10.0'
       script: yarn build
-      before_deploy:
-        - cd dist
       deploy:
         provider: npm
         email: '$NPM_EMAIL'
