--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "tsc-watch": "^2.1.2",
     "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.18.0",
+    "typedoc": "^0.14.2",
     "typescript": "^3.3.3333"
   },
   "dependencies": {
@@ -72,7 +73,8 @@
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "npm run test -- --watch",
     "format": "prettier --config ./.prettierrc --write 'src/**/*' 'README.md'",
-    "size": "size-limit"
+    "size": "size-limit",
+    "typedoc": "typedoc --out ./docs --mode modules --tsconfig ./tsconfig.json ./src/"
   },
   "husky": {
     "hooks": {
