fix: got rid of models folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ script:
   - echo "Running tests against $(node -v) ...
   - yarn test
 
+before_deploy:
+  - yarn build
+
 after_success:
   - yarn typedoc
   - npm pack
