--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "lodash-es": "^4.17.11"
   },
   "scripts": {
-    "start": "rimraf dist && rimraf compiled && mkdir dist && cp-cli ./index.js ./dist/index.js && cross-env NODE_ENV=development tsc -p tsconfig.base.json && rollup -w -c | tsc -w -p tsconfig.base.json",
+    "start": "rimraf dist && rimraf compiled && mkdir dist && cp-cli ./index.js ./dist/index.js && cross-env NODE_ENV=development tsc -p tsconfig.json && rollup -w -c | tsc -w -p tsconfig.json",
     "prebuild": "rimraf dist && rimraf compiled",
-    "build": "cross-env NODE_ENV=production tsc -p tsconfig.base.json  && rollup -c && rimraf compiled && cp-cli ./index.js ./dist/index.js",
+    "build": "cross-env NODE_ENV=production tsc -p tsconfig.json  && rollup -c && rimraf compiled && cp-cli ./index.js ./dist/index.js",
     "prepublish": "npm run build",
     "lint": "tslint --config ./tslint.json --project '.' --format stylish",
     "test": "cross-env NODE_ENV=test jest",
