--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "importHelpers": true,
     "jsx": "react",
     "lib": ["es2015", "dom"],
-    "module": "commonjs",
+    "module": "es6",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
