fix: setting default NODE_ENV in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ cache:
   directories:
     - node_modules
 
+env:
+  - NODE_ENV=development
+
 script:
   - echo "Running tests against $(node -v) ...
   - yarn test
