--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cp-cli": "^2.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.15.1",
+    "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
     "jest": "^24.5.0",
     "jest-cli": "^24.5.0",
@@ -74,7 +75,8 @@
     "test:watch": "npm run test -- --watch",
     "format": "prettier --config ./.prettierrc --write 'src/**/*' 'README.md'",
     "size": "size-limit",
-    "typedoc": "typedoc --out ./docs --mode modules --tsconfig ./tsconfig.json ./src/"
+    "docs": "typedoc --out ./docs --mode modules --tsconfig ./tsconfig.json ./src/",
+    "gh-pages": "rimraf docs && npm run docs && gh-pages -d docs"
   },
   "husky": {
     "hooks": {
