--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,40 @@
 language: node_js
 node_js:
   - 8
-  - 9
   - node
 cache:
   yarn: true
   directories:
     - node_modules
 
-env:
-  - NODE_ENV=development
+before_script:
+  - npm run setup
+  - npm run build
 
 script:
-  - yarn test
+  - npm run test
+
+after_success:
+  - npm run typedoc
+  - npm pack
+
+deploy:
+  - provider: pages
+    skip_cleanup: true
+    local_dir: docs/
+    github_token: $GITHUB_TOKEN
+    on:
+      tags: true
+  - provider: releases
+    api_key: $GITHUB_TOKEN
+    file_glob: true
+    file: '{YOURLIB}-*.tgz'
+    skip_cleanup: true
+    on:
+      tags: true
+  - provider: npm
+    skip_cleanup: true
+    email: 'youremail@example.com'
+    api_key: $NPM_TOKEN
+    on:
+      tags: true
