--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ cache:
     - node_modules
 
 before_script:
-  - npm run setup
-  - npm run build
+  - yarn install
+  - yarn build
 
 script:
-  - npm run test
+  - yarn test
 
 after_success:
-  - npm run typedoc
+  - yarn typedoc
   - npm pack
 
 deploy:
