--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.3.4",
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
+    "@types/ajv": "^1.0.0",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
     "@types/lodash-es": "^4.17.3",
@@ -47,6 +48,7 @@
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-size-snapshot": "^0.8.0",
@@ -61,6 +63,7 @@
     "typescript": "^3.3.3333"
   },
   "dependencies": {
+    "ajv": "^6.10.0",
     "deepmerge": "^3.2.0",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11"
